<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/lightblue">
    <include
        layout="@layout/action_bar_top"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:padding="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="50dp">
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true">
                <TableRow>
                    <TextView
                        style="@style/ChangePwdTextStyle"
                        android:text="@string/old_password"/>
                    <EditText
                        android:id="@+id/old_password"
                        style="@style/ChangePwdEditStyle"
                        android:inputType="textPassword"
                        android:hint="@string/input_password"/>
                </TableRow>
                <TableRow
                    android:layout_marginTop="20dp">
                    <TextView
                        style="@style/ChangePwdTextStyle"
                        android:text="@string/new_password"/>
                    <EditText
                        android:id="@+id/new_password_1"
                        style="@style/ChangePwdEditStyle"
                        android:inputType="textPassword"
                        android:hint="@string/input_password"/>
                </TableRow>

                <TableRow
                    android:layout_marginTop="20dp">
                    <TextView
                        style="@style/ChangePwdTextStyle"
                        android:text="@string/new_password_again"/>
                    <EditText
                        android:id="@+id/new_password_2"
                        style="@style/ChangePwdEditStyle"
                        android:inputType="textPassword"
                        android:hint="@string/input_password_again"/>
                </TableRow>
            </TableLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5">
            <Button
                android:id="@+id/commit_btn"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp"
                android:background="@drawable/click_bg"
                android:text="@string/commit"
                android:textColor="@android:color/white" />
        </RelativeLayout>

    </LinearLayout>

</LinearLayout>