<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_bg"
    android:gravity="center_horizontal"
    android:padding="50dp"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:gravity="center"
        android:orientation="vertical">
        <livolo.com.livolointelligermanager.view.MultiShapeView
            android:id="@+id/header"
            android:layout_width="110dp"
            android:layout_height="110dp"
            app:shape="circle"
            app:border_width="1dp"
            app:border_color="@android:color/white"
            android:background="@mipmap/header_black"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="80dp"
            android:padding="8dp"
            android:background="@drawable/text_bg">
            <TextView
                style="@style/LoginTextViewStyle"
                android:text="@string/username" />

            <EditText
                android:id="@+id/username"
                style="@style/LoginEditTextStyle"
                android:hint="@string/input_username_login"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:padding="8dp"
            android:background="@drawable/text_bg">
            <TextView
                style="@style/LoginTextViewStyle"
                android:text="@string/password" />

            <EditText
                android:id="@+id/password"
                style="@style/LoginEditTextStyle"
                android:inputType="textPassword"
                android:hint="@string/input_password_login"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="bottom">
        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/click_white_bg"
            android:text="@string/login"
            android:textColor="@color/light_black" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:text="@string/register_right_now"/>
            <View
                android:layout_width="0.1dp"
                android:layout_height="20dp"
                android:background="@android:color/white"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>
            <TextView
                android:id="@+id/forget_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:text="@string/forget_password"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
