<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightblue"
    android:focusableInTouchMode="true"
    android:focusable="true"
    android:orientation="vertical">

    <include layout="@layout/action_bar_top" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:paddingTop="45dp">

            <livolo.com.livolointelligermanager.view.MultiShapeView
                android:id="@+id/header"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@mipmap/header_black"
                app:border_color="@android:color/white"
                app:border_width="1dp"
                app:shape="circle" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="18dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_marginRight="5dp"
                    android:paddingLeft="13dp"
                    android:background="@drawable/text_bg"/>

                <EditText
                    android:id="@+id/phone_number"
                    style="@style/LoginEditTextStyle"
                    android:background="@drawable/text_bg"
                    android:hint="@string/input_phone"
                    android:paddingLeft="6dp" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="18dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="5dp"
                    android:layout_toLeftOf="@id/code_right"
                    android:background="@drawable/text_bg"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/RegisterEditStyle"
                        android:text="@string/code" />

                    <EditText
                        android:id="@+id/phone_code"
                        style="@style/LoginEditTextStyle"
                        android:hint="@string/input_code" />
                </LinearLayout>

                <TextView
                    android:id="@+id/code_right"
                    android:layout_width="90dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/click_bg"
                    android:gravity="center"
                    android:padding="6dp"
                    android:text="@string/code_btn"
                    android:textColor="@android:color/white"
                    android:textSize="13sp" />
            </RelativeLayout>
            <LinearLayout
                style="@style/registerLayoutStyle"
                android:layout_marginTop="18dp">

                <TextView
                    style="@style/RegisterEditStyle"
                    android:text="@string/password" />

                <EditText
                    android:id="@+id/password"
                    style="@style/LoginEditTextStyle"
                    android:hint="@string/input_password" />
            </LinearLayout>

            <LinearLayout
                style="@style/registerLayoutStyle"
                android:layout_marginTop="18dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/resident_area"/>
                <Spinner
                    android:id="@+id/area_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingLeft="13dp"
                    android:background="@null"/>
            </LinearLayout>

            <LinearLayout
                style="@style/registerLayoutStyle"
                android:layout_marginTop="18dp">

                <TextView
                    style="@style/RegisterEditStyle"
                    android:text="@string/nikename" />

                <EditText
                    android:id="@+id/nikename"
                    style="@style/LoginEditTextStyle"
                    android:hint="@string/input_nike" />
            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="60dp">
                <Button
                    android:id="@+id/next_btn"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_centerVertical="true"
                    android:background="@drawable/click_bg"
                    android:text="@string/register"
                    android:textColor="@android:color/white" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>